[gd_scene load_steps=8 format=3 uid="uid://cqfux2i1uvlbi"]

[ext_resource type="Script" path="res://character_sheet_overview.gd" id="1_bwihf"]
[ext_resource type="PackedScene" uid="uid://clwihkhkn1031" path="res://sortable_list.tscn" id="1_wnvvp"]
[ext_resource type="PackedScene" uid="uid://wqbi8r0gdm48" path="res://character_sheet_header.tscn" id="2_6imi5"]
[ext_resource type="PackedScene" uid="uid://c3mjlofaarp7l" path="res://character_sheet_stat_block.tscn" id="2_qgsol"]
[ext_resource type="PackedScene" uid="uid://das6e3mhanx0r" path="res://character_equipment.tscn" id="4_7xxr8"]
[ext_resource type="PackedScene" uid="uid://bh22nsw5l5cn7" path="res://lesson_picker.tscn" id="4_m51io"]
[ext_resource type="PackedScene" uid="uid://cyvl8xfvgq7hx" path="res://equipment_picker.tscn" id="7_2qk5i"]

[node name="CharacterSheetOverview" type="Control"]
custom_minimum_size = Vector2(500, 800)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bwihf")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterSheetHeader" parent="VBoxContainer2" instance=ExtResource("2_6imi5")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterSheetStatBlock" parent="VBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("2_qgsol")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterEquipment" parent="VBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("4_7xxr8")]
layout_mode = 2

[node name="UpgradeList" parent="VBoxContainer2/VBoxContainer" instance=ExtResource("1_wnvvp")]
layout_mode = 2

[node name="LessonPicker" parent="." instance=ExtResource("4_m51io")]
visible = false
z_index = 4096
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentPicker" parent="." instance=ExtResource("7_2qk5i")]
visible = false
z_index = 1
layout_mode = 1
